todos os icons e imagens no lugar certo

--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@
   </div>
 
   <!-- BOTÕES FLUTUANTES -->
-  <a href="https://www.instagram.com/biovittams/" class="float-btn instagram" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-  <a href="https://wa.me/5561993217218" class="float-btn whatsapp" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
+  <a href="https://www.instagram.com/biovittams/" class="float-btn instagram" aria-label="Instagram">
+    <img src="assets/images/icons/instagram.png" 
+         alt="Instagram" 
+         style="width: 60%; height: 60%; object-fit: contain; display:block; margin:auto;" />
+  </a>
+  <a href="https://wa.me/5561993217218" class="float-btn whatsapp" aria-label="WhatsApp">
+    <img src="assets/images/icons/whatsapp.png" 
+         alt="WhatsApp" 
+         style="width: 60%; height: 60%; object-fit: contain; display:block; margin:auto;" />
+  </a>
 
   <!-- SEÇÃO: HEADER -->
   <header class="header fixed inset-x-0 top-0 z-[1000] bg-white shadow-sm transition-all">
@@ -210,18 +218,28 @@
           <h2 class="section-title">Tecnologia e cuidado para sua saúde</h2>
         </div>
         <div class="proc-card" data-animate="slide-left">
-          <div class="proc-img"><div class="img-placeholder">
-            <img 
-              src="assets/images/galeria/Escleroterapia.jpg"
-              alt="Escleroterapia"
-              style="
-                width: 80%;
-                height: 80%;
-                object-fit: contain;
-                display: block;
-                margin: 0 auto;
-              "
-            />
+          <div class="proc-img"><div class="img-placeholder" style="display:flex; align-items:center; justify-content:center;">
+            <div style="
+              width: 65%;
+              height: 65%;
+              border-radius: 9999px;
+              overflow: hidden;
+              display:flex;
+              align-items:center;
+              justify-content:center;
+              background: white;
+              padding: 8px;
+            ">
+              <img 
+                src="assets/images/galeria/Escleroterapia.png" 
+                alt="Escleroterapia"
+                style="
+                  width: 100%;
+                  height: 100%;
+                  object-fit: contain;
+                "
+              />
+            </div>
           </div></div>
           <div class="proc-text">
             <h3>Escleroterapia</h3>
@@ -231,48 +249,71 @@
               <li>✓ Reduz desconforto de vasinhos e microvarizes</li>
               <li>✓ Procedimento rápido, seguro e eficaz</li>
             </ul>
+            <br>
             <a class="btn btn-primary ripple" href="https://wa.me/5561993217218">Agendar Consulta</a>
           </div>
         </div>
         <div class="proc-card reverse" data-animate="slide-right">
-          <div class="proc-img"><div class="img-placeholder">
-            <img 
-              src="assets/images/galeria/Neuropsicológica.jpg"
-              alt="Avaliação Neuropsicológica"
-              style="
-                width: 80%;
-                height: 80%;
-                object-fit: contain;
-                display: block;
-                margin: 0 auto;
-              "
-            />
+          <div class="proc-img"><div class="img-placeholder" style="display:flex; align-items:center; justify-content:center;">
+            <div style="
+              width: 65%;
+              height: 65%;
+              border-radius: 9999px;
+              overflow: hidden;
+              display:flex;
+              align-items:center;
+              justify-content:center;
+              background: white;
+              padding: 8px;
+            ">
+              <img 
+                src="assets/images/galeria/cardiologia.png" 
+                alt="Avaliação Neuropsicológica"
+                style="
+                  width: 100%;
+                  height: 100%;
+                  object-fit: contain;
+                "
+              />
+            </div>
           </div></div>
           <div class="proc-text">
             <h3>Avaliação Neuropsicológica</h3>
             <p>Faça sua avaliação Neuropsicológica completa. Cuide da sua mente, fortaleça sua vida.</p>
+            <br>
             <a class="btn btn-secondary ripple" href="https://wa.me/5561993217218">Agendar Avaliação</a>
           </div>
         </div>
         <div class="proc-card" data-animate="slide-left">
-          <div class="proc-img"><div class="img-placeholder">
-            <img 
-              src="assets/images/galeria/cardiologia.jpg"
-              alt="Exames Cardiológicos"
-              style="
-                width: 80%;
-                height: 80%;
-                object-fit: contain;
-                display: block;
-                margin: 0 auto;
-              "
-            />
+          <div class="proc-img"><div class="img-placeholder" style="display:flex; align-items:center; justify-content:center;">
+            <div style="
+              width: 65%;
+              height: 65%;
+              border-radius: 9999px;
+              overflow: hidden;
+              display:flex;
+              align-items:center;
+              justify-content:center;
+              background: white;
+              padding: 8px;
+            ">
+              <img 
+                src="assets/images/galeria/Neuropsicológica.png" 
+                alt="Exames Cardiológicos"
+                style="
+                  width: 100%;
+                  height: 100%;
+                  object-fit: contain;
+                "
+              />
+            </div>
           </div></div>
           <div class="proc-text">
             <h3>Exames Cardiológicos</h3>
             <p>Consulta completa com Eletrocardiograma</p>
             <p class="offer">Consulta + ECG por R$ 199,90*</p>
             <p>Agende sua consulta com um de nossos cardiologistas</p>
+            <br>
             <a class="btn btn-primary ripple" href="https://wa.me/5561993217218">Agendar Exame</a>
           </div>
         </div>
