arrumei a rolagem da tela no mobile

--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
   <a href="https://www.instagram.com/biovittams/" class="float-btn instagram" aria-label="Instagram">
     <img src="assets/images/icons/instagram.png" 
          alt="Instagram" 
+         loading="lazy"
          style="width: 60%; height: 60%; object-fit: contain; display:block; margin:auto;" />
   </a>
   <a href="https://wa.me/5561993217218" class="float-btn whatsapp" aria-label="WhatsApp">
     <img src="assets/images/icons/whatsapp.png" 
          alt="WhatsApp" 
+         loading="lazy"
          style="width: 60%; height: 60%; object-fit: contain; display:block; margin:auto;" />
   </a>
 
@@ -152,28 +154,28 @@
           <div class="grid gap-4 sm:grid-cols-2">
             <div class="sobre-card" data-animate="scale-up">
               <div class=>
-                <img src="assets/images/icons/imgi_2_Post-do-Instagram-Melhores-Planos-de-Saude-Moderno-Azul-Post-para-Instagram-45-2-scaled.png" alt="Icone convenios aceitos" class="h-10 w-10 object-contain" />
+                <img src="assets/images/icons/imgi_2_Post-do-Instagram-Melhores-Planos-de-Saude-Moderno-Azul-Post-para-Instagram-45-2-scaled.png" alt="Icone convenios aceitos" class="h-10 w-10 object-contain" loading="lazy" />
               </div>
               <h3>40+ Convênios Aceitos</h3>
               <p>Facilitamos seu acesso à saúde</p>
             </div>
             <div class="sobre-card" data-animate="scale-up">
               <div class="icon red">
-                <img src="assets/images/icons/Clínica Médica.png" alt="Icone equipe qualificada" class="h-10 w-10 object-contain" />
+                <img src="assets/images/icons/Clínica Médica.png" alt="Icone equipe qualificada" class="h-10 w-10 object-contain" loading="lazy" />
               </div>
               <h3>Equipe Qualificada</h3>
               <p>Especialistas com vasta experiência</p>
             </div>
             <div class="sobre-card" data-animate="scale-up">
               <div class="icon blue">
-                <img src="assets/images/icons/cadeira-de-dentista.png" alt="Icone equipamentos modernos" class="h-10 w-10 object-contain" />
+                <img src="assets/images/icons/cadeira-de-dentista.png" alt="Icone equipamentos modernos" class="h-10 w-10 object-contain" loading="lazy" />
               </div>
               <h3>Equipamentos Modernos</h3>
               <p>Diagnósticos precisos e rápidos</p>
             </div>
             <div class="sobre-card" data-animate="scale-up">
               <div class="icon red">
-                <img src="assets/images/icons/atendimento-ao-cliente.png" alt="Icone atendimento humanizado" class="h-10 w-10 object-contain" />
+                <img src="assets/images/icons/atendimento-ao-cliente.png" alt="Icone atendimento humanizado" class="h-10 w-10 object-contain" loading="lazy" />
               </div>
               <h3>Atendimento Humanizado</h3>
               <p>Cuidado individualizado e acolhedor</p>
@@ -181,7 +183,7 @@
           </div>
         </div>
         <div class="image-frame" data-animate="slide-right">
-          <img src="https://images.unsplash.com/photo-1504439468489-c8920d796a29?auto=format&fit=crop&w=1000&q=80" alt="Recepção da clínica" />
+          <img src="https://images.unsplash.com/photo-1504439468489-c8920d796a29?auto=format&fit=crop&w=1000&q=80" alt="Recepção da clínica" loading="lazy" />
         </div>
       </div>
     </section>
@@ -197,17 +199,17 @@
         </div>
         <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
           <!-- 11 Cards -->
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Clínica Médica.png" alt="Ícone Clínica Médica" class="h-10 w-10 object-contain" /></div><h3>Clínica Médica</h3><p>Atendimento geral e preventivo</p><div class="price">R$ 99,00*</div><span class="badge-tag">#BemEstarParaVocê</span><button class="btn-outline blue ripple">Agendar</button></div>
-          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Cardiologia.png" alt="Ícone Cardiologia" class="h-10 w-10 object-contain" /></div><h3>Cardiologia</h3><p>Saúde do coração e sistema cardiovascular</p><div class="price">R$ 199,90*</div><small>Consulta + Eletrocardiograma</small><button class="btn-outline red ripple">Agendar</button></div>
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Ginecologia.png" alt="Ícone Ginecologia" class="h-10 w-10 object-contain" /></div><h3>Ginecologia</h3><p>Cuidar da sua saúde íntima é amor-próprio</p><div class="price">R$ 120,00*</div><button class="btn-outline blue ripple">Agendar</button></div>
-          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/vascular.png" alt="Ícone Angiologia" class="h-10 w-10 object-contain" /></div><h3>Angiologia</h3><p>Cuidar do sistema vascular é garantir vida em cada parte</p><button class="btn-outline red ripple">Agendar</button></div>
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/pele.png" alt="Ícone Dermatologia" class="h-10 w-10 object-contain" /></div><h3>Dermatologia</h3><p>Saúde e beleza da pele</p><button class="btn-outline blue ripple">Agendar</button></div>
-          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Psicologia.png" alt="Ícone Psicologia" class="h-10 w-10 object-contain" /></div><h3>Psicologia</h3><p>Terapia: autoconhecimento, emoções, resiliência</p><button class="btn-outline red ripple">Agendar</button></div>
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Psiquiatria.png" alt="Ícone Psiquiatria" class="h-10 w-10 object-contain" /></div><h3>Psiquiatria</h3><p>Tratamento especializado em saúde mental</p><button class="btn-outline blue ripple">Agendar</button></div>
-          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Neuropsicologia.png" alt="Ícone Neuropsicologia" class="h-10 w-10 object-contain" /></div><h3>Neuropsicologia</h3><p>Faça sua avaliação. Cuide da mente.</p><button class="btn-outline red ripple">Agendar Avaliação</button></div>
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Nutrição.png" alt="Ícone Nutrição" class="h-10 w-10 object-contain" /></div><h3>Nutrição</h3><p>Alimentação saudável e equilibrada</p><button class="btn-outline blue ripple">Agendar</button></div>
-          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Ortopedia.png" alt="Ícone Ortopedia" class="h-10 w-10 object-contain" /></div><h3>Ortopedia</h3><p>Cuidados com ossos e articulações</p><button class="btn-outline red ripple">Agendar</button></div>
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Medicina do Trabalho.png" alt="Ícone Medicina do Trabalho" class="h-10 w-10 object-contain" /></div><h3>Medicina do Trabalho</h3><p>Exames admissionais e ocupacionais</p><button class="btn-outline blue ripple">Agendar</button></div>
+          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Clínica Médica.png" alt="Ícone Clínica Médica" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Clínica Médica</h3><p>Atendimento geral e preventivo</p><div class="price">R$ 99,00*</div><span class="badge-tag">#BemEstarParaVocê</span><button class="btn-outline blue ripple">Agendar</button></div>
+          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Cardiologia.png" alt="Ícone Cardiologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Cardiologia</h3><p>Saúde do coração e sistema cardiovascular</p><div class="price">R$ 199,90*</div><small>Consulta + Eletrocardiograma</small><button class="btn-outline red ripple">Agendar</button></div>
+          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Ginecologia.png" alt="Ícone Ginecologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Ginecologia</h3><p>Cuidar da sua saúde íntima é amor-próprio</p><div class="price">R$ 120,00*</div><button class="btn-outline blue ripple">Agendar</button></div>
+          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/vascular.png" alt="Ícone Angiologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Angiologia</h3><p>Cuidar do sistema vascular é garantir vida em cada parte</p><button class="btn-outline red ripple">Agendar</button></div>
+          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/pele.png" alt="Ícone Dermatologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Dermatologia</h3><p>Saúde e beleza da pele</p><button class="btn-outline blue ripple">Agendar</button></div>
+          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Psicologia.png" alt="Ícone Psicologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Psicologia</h3><p>Terapia: autoconhecimento, emoções, resiliência</p><button class="btn-outline red ripple">Agendar</button></div>
+          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Psiquiatria.png" alt="Ícone Psiquiatria" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Psiquiatria</h3><p>Tratamento especializado em saúde mental</p><button class="btn-outline blue ripple">Agendar</button></div>
+          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Neuropsicologia.png" alt="Ícone Neuropsicologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Neuropsicologia</h3><p>Faça sua avaliação. Cuide da mente.</p><button class="btn-outline red ripple">Agendar Avaliação</button></div>
+          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Nutrição.png" alt="Ícone Nutrição" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Nutrição</h3><p>Alimentação saudável e equilibrada</p><button class="btn-outline blue ripple">Agendar</button></div>
+          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Ortopedia.png" alt="Ícone Ortopedia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Ortopedia</h3><p>Cuidados com ossos e articulações</p><button class="btn-outline red ripple">Agendar</button></div>
+          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Medicina do Trabalho.png" alt="Ícone Medicina do Trabalho" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Medicina do Trabalho</h3><p>Exames admissionais e ocupacionais</p><button class="btn-outline blue ripple">Agendar</button></div>
         </div>
       </div>
     </section>
@@ -236,6 +238,7 @@
               <img 
                 src="assets/images/galeria/Escleroterapia.png" 
                 alt="Escleroterapia"
+                loading="lazy"
                 style="
                   width: 100%;
                   height: 100%;
@@ -272,6 +275,7 @@
               <img 
                 src="assets/images/galeria/cardiologia.png" 
                 alt="Avaliação Neuropsicológica"
+                loading="lazy"
                 style="
                   width: 100%;
                   height: 100%;
@@ -303,6 +307,7 @@
               <img 
                 src="assets/images/galeria/Neuropsicológica.png" 
                 alt="Exames Cardiológicos"
+                loading="lazy"
                 style="
                   width: 100%;
                   height: 100%;
@@ -384,17 +389,17 @@
         </div>
         <div class="gallery-grid">
           <!-- placeholders -->
-          <div class="gallery-item" data-category="recepcao"><img src="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=800&q=70" alt="Recepção" /></div>
-          <div class="gallery-item" data-category="consultorios"><img src="https://images.unsplash.com/photo-1504439904031-93ded9e6cc59?auto=format&fit=crop&w=800&q=70" alt="Consultório" /></div>
-          <div class="gallery-item" data-category="equipamentos"><img src="https://images.unsplash.com/photo-1504439468489-c8920d796a29?auto=format&fit=crop&w=800&q=70" alt="Equipamento" /></div>
-          <div class="gallery-item" data-category="exames"><img src="https://images.unsplash.com/photo-1582719478248-54e9f2af67b7?auto=format&fit=crop&w=800&q=70" alt="Sala de exame" /></div>
-          <div class="gallery-item" data-category="consultorios"><img src="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?auto=format&fit=crop&w=800&q=70" alt="Consultório" /></div>
-          <div class="gallery-item" data-category="equipamentos"><img src="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?auto=format&fit=crop&w=800&q=70" alt="Equipamento" /></div>
-          <div class="gallery-item" data-category="exames"><img src="https://images.unsplash.com/photo-1530023367847-a683933f4177?auto=format&fit=crop&w=800&q=70" alt="Exame" /></div>
-          <div class="gallery-item" data-category="recepcao"><img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=800&q=70" alt="Recepção" /></div>
+          <div class="gallery-item" data-category="recepcao"><img src="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=800&q=70" alt="Recepção" loading="lazy" /></div>
+          <div class="gallery-item" data-category="consultorios"><img src="https://images.unsplash.com/photo-1504439904031-93ded9e6cc59?auto=format&fit=crop&w=800&q=70" alt="Consultório" loading="lazy" /></div>
+          <div class="gallery-item" data-category="equipamentos"><img src="https://images.unsplash.com/photo-1504439468489-c8920d796a29?auto=format&fit=crop&w=800&q=70" alt="Equipamento" loading="lazy" /></div>
+          <div class="gallery-item" data-category="exames"><img src="https://images.unsplash.com/photo-1582719478248-54e9f2af67b7?auto=format&fit=crop&w=800&q=70" alt="Sala de exame" loading="lazy" /></div>
+          <div class="gallery-item" data-category="consultorios"><img src="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?auto=format&fit=crop&w=800&q=70" alt="Consultório" loading="lazy" /></div>
+          <div class="gallery-item" data-category="equipamentos"><img src="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?auto=format&fit=crop&w=800&q=70" alt="Equipamento" loading="lazy" /></div>
+          <div class="gallery-item" data-category="exames"><img src="https://images.unsplash.com/photo-1530023367847-a683933f4177?auto=format&fit=crop&w=800&q=70" alt="Exame" loading="lazy" /></div>
+          <div class="gallery-item" data-category="recepcao"><img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=800&q=70" alt="Recepção" loading="lazy" /></div>
         </div>
       </div>
-      <div id="lightbox" class="lightbox"><span class="close">×</span><img src="" alt="Galeria" /></div>
+      <div id="lightbox" class="lightbox"><span class="close">×</span><img src="" alt="Galeria" loading="lazy" /></div>
     </section>
     <!-- FIM SEÇÃO: GALERIA -->
 
