--- a/index.html
+++ b/index.html
@@ -199,18 +199,165 @@
         </div>
         <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
           <!-- 11 Cards -->
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Clínica Médica.png" alt="Ícone Clínica Médica" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Clínica Médica</h3><p>Atendimento geral e preventivo</p><div class="price">R$ 99,00*</div><span class="badge-tag">#BemEstarParaVocê</span><button class="btn-outline blue ripple">Agendar</button></div>
-          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Cardiologia.png" alt="Ícone Cardiologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Cardiologia</h3><p>Saúde do coração e sistema cardiovascular</p><div class="price">R$ 199,90*</div><small>Consulta + Eletrocardiograma</small><button class="btn-outline red ripple">Agendar</button></div>
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Ginecologia.png" alt="Ícone Ginecologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Ginecologia</h3><p>Cuidar da sua saúde íntima é amor-próprio</p><div class="price">R$ 120,00*</div><button class="btn-outline blue ripple">Agendar</button></div>
-          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/vascular.png" alt="Ícone Angiologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Angiologia</h3><p>Cuidar do sistema vascular é garantir vida em cada parte</p><button class="btn-outline red ripple">Agendar</button></div>
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/pele.png" alt="Ícone Dermatologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Dermatologia</h3><p>Saúde e beleza da pele</p><button class="btn-outline blue ripple">Agendar</button></div>
-          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Psicologia.png" alt="Ícone Psicologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Psicologia</h3><p>Terapia: autoconhecimento, emoções, resiliência</p><button class="btn-outline red ripple">Agendar</button></div>
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Psiquiatria.png" alt="Ícone Psiquiatria" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Psiquiatria</h3><p>Tratamento especializado em saúde mental</p><button class="btn-outline blue ripple">Agendar</button></div>
-          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Neuropsicologia.png" alt="Ícone Neuropsicologia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Neuropsicologia</h3><p>Faça sua avaliação. Cuide da mente.</p><button class="btn-outline red ripple">Agendar Avaliação</button></div>
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Nutrição.png" alt="Ícone Nutrição" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Nutrição</h3><p>Alimentação saudável e equilibrada</p><button class="btn-outline blue ripple">Agendar</button></div>
-          <div class="esp-card red" data-animate="stagger"><div class="esp-icon red"><img src="assets/images/icons/Ortopedia.png" alt="Ícone Ortopedia" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Ortopedia</h3><p>Cuidados com ossos e articulações</p><button class="btn-outline red ripple">Agendar</button></div>
-          <div class="esp-card blue" data-animate="stagger"><div class="esp-icon blue"><img src="assets/images/icons/Medicina do Trabalho.png" alt="Ícone Medicina do Trabalho" class="h-10 w-10 object-contain" loading="lazy" /></div><h3>Medicina do Trabalho</h3><p>Exames admissionais e ocupacionais</p><button class="btn-outline blue ripple">Agendar</button></div>
-        </div>
+          <div class="esp-card blue" data-animate="stagger">
+  <div class="esp-icon blue">
+    <img src="assets/images/icons/Clínica Médica.png" alt="Ícone Clínica Médica" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Clínica Médica</h3>
+  <p>Atendimento geral e preventivo</p>
+  <div class="price">R$ 99,00*</div>
+  <span class="badge-tag">#BemEstarParaVocê</span>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20consulta%20em%20Cl%C3%ADnica%20M%C3%A9dica."
+    class="btn-outline blue ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar</a>
+</div>
+
+<div class="esp-card red" data-animate="stagger">
+  <div class="esp-icon red">
+    <img src="assets/images/icons/Cardiologia.png" alt="Ícone Cardiologia" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Cardiologia</h3>
+  <p>Saúde do coração e sistema cardiovascular</p>
+  <div class="price">R$ 199,90*</div>
+  <small>Consulta + Eletrocardiograma</small>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20consulta%20em%20Cardiologia."
+    class="btn-outline red ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar</a>
+</div>
+
+<div class="esp-card blue" data-animate="stagger">
+  <div class="esp-icon blue">
+    <img src="assets/images/icons/Ginecologia.png" alt="Ícone Ginecologia" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Ginecologia</h3>
+  <p>Cuidar da sua saúde íntima é amor-próprio</p>
+  <div class="price">R$ 120,00*</div>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20consulta%20em%20Ginecologia."
+    class="btn-outline blue ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar</a>
+</div>
+
+<div class="esp-card red" data-animate="stagger">
+  <div class="esp-icon red">
+    <img src="assets/images/icons/vascular.png" alt="Ícone Angiologia" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Angiologia</h3>
+  <p>Cuidar do sistema vascular é garantir vida em cada parte</p>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20consulta%20em%20Angiologia."
+    class="btn-outline red ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar</a>
+</div>
+
+<div class="esp-card blue" data-animate="stagger">
+  <div class="esp-icon blue">
+    <img src="assets/images/icons/pele.png" alt="Ícone Dermatologia" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Dermatologia</h3>
+  <p>Saúde e beleza da pele</p>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20consulta%20em%20Dermatologia."
+    class="btn-outline blue ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar</a>
+</div>
+
+<div class="esp-card red" data-animate="stagger">
+  <div class="esp-icon red">
+    <img src="assets/images/icons/Psicologia.png" alt="Ícone Psicologia" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Psicologia</h3>
+  <p>Terapia: autoconhecimento, emoções, resiliência</p>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20consulta%20em%20Psicologia."
+    class="btn-outline red ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar</a>
+</div>
+
+<div class="esp-card blue" data-animate="stagger">
+  <div class="esp-icon blue">
+    <img src="assets/images/icons/Psiquiatria.png" alt="Ícone Psiquiatria" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Psiquiatria</h3>
+  <p>Tratamento especializado em saúde mental</p>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20consulta%20em%20Psiquiatria."
+    class="btn-outline blue ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar</a>
+</div>
+
+<div class="esp-card red" data-animate="stagger">
+  <div class="esp-icon red">
+    <img src="assets/images/icons/Neuropsicologia.png" alt="Ícone Neuropsicologia" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Neuropsicologia</h3>
+  <p>Faça sua avaliação. Cuide da mente.</p>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20avalia%C3%A7%C3%A3o%20em%20Neuropsicologia."
+    class="btn-outline red ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar Avaliação</a>
+</div>
+
+<div class="esp-card blue" data-animate="stagger">
+  <div class="esp-icon blue">
+    <img src="assets/images/icons/Nutrição.png" alt="Ícone Nutrição" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Nutrição</h3>
+  <p>Alimentação saudável e equilibrada</p>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20consulta%20em%20Nutri%C3%A7%C3%A3o."
+    class="btn-outline blue ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar</a>
+</div>
+
+<div class="esp-card red" data-animate="stagger">
+  <div class="esp-icon red">
+    <img src="assets/images/icons/Ortopedia.png" alt="Ícone Ortopedia" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Ortopedia</h3>
+  <p>Cuidados com ossos e articulações</p>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20uma%20consulta%20em%20Ortopedia."
+    class="btn-outline red ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar</a>
+</div>
+
+<div class="esp-card blue" data-animate="stagger">
+  <div class="esp-icon blue">
+    <img src="assets/images/icons/Medicina do Trabalho.png" alt="Ícone Medicina do Trabalho" class="h-10 w-10 object-contain" loading="lazy" />
+  </div>
+  <h3>Medicina do Trabalho</h3>
+  <p>Exames admissionais e ocupacionais</p>
+  <a
+    href="https://wa.me/5561993217218?text=Ol%C3%A1%2C%20gostaria%20de%20agendar%20um%20atendimento%20em%20Medicina%20do%20Trabalho."
+    class="btn-outline blue ripple"
+    target="_blank"
+    rel="noopener noreferrer"
+  >Agendar</a>
+</div>
+
       </div>
     </section>
     <!-- FIM SEÇÃO: ESPECIALIDADES -->
@@ -390,12 +537,12 @@
         <div class="gallery-grid">
           <!-- placeholders -->
           <div class="gallery-item" data-category="recepcao"><img src="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=800&q=70" alt="Recepção" loading="lazy" /></div>
-          <div class="gallery-item" data-category="consultorios"><img src="https://images.unsplash.com/photo-1504439904031-93ded9e6cc59?auto=format&fit=crop&w=800&q=70" alt="Consultório" loading="lazy" /></div>
+          <div class="gallery-item" data-category="consultorios"><img src="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=800&q=70" alt="Consultório" loading="lazy" /></div>
           <div class="gallery-item" data-category="equipamentos"><img src="https://images.unsplash.com/photo-1504439468489-c8920d796a29?auto=format&fit=crop&w=800&q=70" alt="Equipamento" loading="lazy" /></div>
-          <div class="gallery-item" data-category="exames"><img src="https://images.unsplash.com/photo-1582719478248-54e9f2af67b7?auto=format&fit=crop&w=800&q=70" alt="Sala de exame" loading="lazy" /></div>
-          <div class="gallery-item" data-category="consultorios"><img src="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?auto=format&fit=crop&w=800&q=70" alt="Consultório" loading="lazy" /></div>
+          <div class="gallery-item" data-category="exames"><img src="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=800&q=70" alt="Sala de exame" loading="lazy" /></div>
+          <div class="gallery-item" data-category="consultorios"><img src="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=800&q=70" alt="Consultório" loading="lazy" /></div>
           <div class="gallery-item" data-category="equipamentos"><img src="https://images.unsplash.com/photo-1526256262350-7da7584cf5eb?auto=format&fit=crop&w=800&q=70" alt="Equipamento" loading="lazy" /></div>
-          <div class="gallery-item" data-category="exames"><img src="https://images.unsplash.com/photo-1530023367847-a683933f4177?auto=format&fit=crop&w=800&q=70" alt="Exame" loading="lazy" /></div>
+          <div class="gallery-item" data-category="exames"><img src="https://images.unsplash.com/photo-1505751172876-fa1923c5c528?auto=format&fit=crop&w=800&q=70" alt="Exame" loading="lazy" /></div>
           <div class="gallery-item" data-category="recepcao"><img src="https://images.unsplash.com/photo-1582719478250-c89cae4dc85b?auto=format&fit=crop&w=800&q=70" alt="Recepção" loading="lazy" /></div>
         </div>
       </div>
@@ -432,7 +579,7 @@
               <p>Melhor clínica da região! Profissionais qualificados e preços justos. Aceitam meu convênio sem burocracia.</p>
             </div>
           </div>
-          <button class="carousel-control next" aria-label="Próximo">›</button>
+          
           <div class="carousel-dots"></div>
         </div>
       </div>
